syntax = "proto3";

option go_package = "github.com/khusainnov/notification/api/notification/v1;napi";

service NotificationService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse) {}
}

enum EmailDeliveryStatus {
  EMAIL_DELIVERY_STATUS_UNSPECIFIED = 0;
  EMAIL_DELIVERY_STATUS_OK = 1;
  EMAIL_DELIVERY_STATUS_FAILED = 2;
}

message SendEmailRequest {
  repeated string emails = 1;
  string subject = 2;
  Email body = 3;
}

message Email {
  string body = 1;
}

message SendEmailResponse {
  EmailDeliveryStatus status = 1;
}
